[tool.poetry]
name = "snake_log_analyzer"
version = "0.1.0"
description = "a log analyzer for snakemake, write it with python"
license = "MIT"
readme = "README.md"
keywords = ["log", "analyzer", "snakemake", "bioinformatics"]
repository = "https://github.com/luoyueyuguang/snakemake_profiling_tools.git"

[tool.poetry.dependencies]
python = "^3.6"
matplotlib = "^3.2.1"
numpy = "^1.18.2"

[tool.poetry.scripts]
snake_log_analyzer = "snake_log_analyzer.run:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


